Added customer name

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,8 +14,11 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+    <form id="tshirt-order-form">
+      <div>
+        <label for="name">Customer Name:</label>
+        <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+" title="Please enter a valid name (letters and spaces only).">
+      </div>
   </form>
 
   </main>
