Added customer email

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -19,6 +19,10 @@
         <label for="name">Customer Name:</label>
         <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+" title="Please enter a valid name (letters and spaces only).">
       </div>
+      <div>
+        <label for="email">Customer Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
   </form>
 
   </main>
