Added delivery date

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -45,7 +45,10 @@
         <option value="XXL">XXL</option>
       </select>
     </div>
-    
+    <div>
+      <label for="delivery">Delivery Date:</label>
+      <input type="date" id="delivery" name="delivery" required min="" max="">
+    </div>
   
 
       
