Added my name at the footer

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -58,6 +58,7 @@
   <footer>
     <!-- change to your name-->
     <h2>By HOMEWORK SOLUTION</h2>
+    <h2> By Millena Mesfin</h2>
   </footer>
 </body>
 
