--- a/Wireframe back up/index.html
+++ b/Wireframe back up/index.html
@@ -43,17 +43,14 @@
     </main>
 
     <footer>
-        <div class="footer-container">
+       <div class="footer-container">
             <!-- Social Links Column -->
             <div class="footer-column footer-social">
               <h3>Follow Us</h3>
-                <ul>
-                  <li><a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
-                  <li><a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-                  <li><a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-              </ul>
-                </ul>
+              <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+              <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
 
             <!-- Sign-up Form Column -->
@@ -69,14 +66,14 @@
             <!-- Footer Links Column -->
             <div class="footer-column footer-links">
               <h3>Quick Links</h3>
-              <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#privacy">Privacy</a></li>
-              </ul>
+              <a href="#about">About</a>
+              <a href="#services">Services</a>
+              <a href="#contact">Contact</a>
+              <a href="#privacy">Privacy Policy</a>
             </div>
           </div>
           <p>&copy; Git and Github Fundamentals. All rights reserved.</p>
+  
     </footer>
 
  </body>
