removed duplicate size id

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,7 +44,7 @@
       </fieldset>
     </fieldset>
     
-     <fieldset id="size">
+     <fieldset>
       <label for="size">T-shirt size</label>
       <select name="size" id="size" required>
         <option value="XS">XS</option>
