--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -47,6 +47,7 @@
      <fieldset>
       <label for="size">T-shirt size</label>
       <select name="size" id="size" required>
+        <option value="Pick a Size"></option>
         <option value="XS">XS</option>
         <option value="S">S</option>
         <option value="M">M</option>
