initial html structure

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,9 +13,37 @@
     <h1>Product Pick check</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+
+  <form action="" method="get">
+    <div>
+      <label>Name</label>
+      <input type="text">
+    </div>
+    <div>
+      <label>Email</label>
+      <input type="email">
+    </div>
+    <div>
+      <!-- 3 options colors -->
+      <label>Color</label>
+      <input type="text">
+    </div>
+    <div>
+      <!-- 6 options: XS, S, M, L, XL, XXL -->
+      <label>Size</label>
+      <input type="text">
+    </div>
+    <div>
+    <!-- make sure that date is in the next four weeks. -->
+      <label>Delivery Date</label>
+      <input type="date">
+    </div>
+    <div>
+    <label>Password</label>
+    <input type="password">
+    </div>
+    <button>Submit</button>
+   
   </form>
 
   </main>
