I have created the colour and size selection fields

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,9 +32,25 @@
         <label for="T-shirt color">Select your t-shirt colour:</label>
         <select id="T-shirt color" name="T-shirt color" required>
         <option value="" disabled selected>Select your colour</option>  
+        <option value="S">White</option>
+        <option value="Black">Black</option>
+        <option value="Grey">Grey</option>
         </select>
     </div>
-  
+
+  <!--Size selection-->  
+  <div class="form-contents">
+  <label for="T-shirt size">Select your size:</label>
+  <select id="T-shirt size" name="T-shirt size" required>
+  <option value="" disabled selected>Select your size</option>  
+  <option value="Extra-Small">Extra-Small (XS)</option>
+  <option value="Small">Small (S)</option>
+  <option value="Medium">Medium M)</option>
+  <option value="Large">Large (L)</option>
+  <option value="Extra-Large">Extra-Large (XL)</option>
+  <option value="Double Extra-Large">Double Extra-Large (XXL)</option>
+  </select>
+</div>  
   
   </form>
 
