--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="What is Git.">
+    <meta name="keywords" content="Git, Branch, Developers, Version Control">
+    <meta name="author" content="Pooriya">
     <title>Git</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
