--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Add your HTML markup here -->
-    <p>This is an empty page</p>
+    <div class="Title">
+    <header><h1>GIT</h1></header>
+    <h3>Introduction of Git</h3>
+    </div>
+  
+
+    <main>
+      <div class="first">
+      <img class="pic" src="git.png" alt="Git" width="30%">
+      <h2>Git</h2>
+      <p>Git is a free, open-source version control system (VCS) that helps developers track changes to their code and collaborate on projects. 
+        It's considered the modern standard for software development and is the most widely used VCS in the world</p>
+      <button type="button">Read More</button>
+    </div>
+    <div class="downside">
+    <div class="second">
+      <img class="pic" src="developer.jpeg" alt="Why do developers need Git" width="30%">
+      <h2>Why do developers need Git?</h2>
+      <p>Git eliminates everything from the time wasted passing commits over a network connection to the man hours required to integrate changes in a centralized version control system. 
+        It even makes better use of junior developers by giving them a safe environment to work in.</p>
+      <button type="button">Read More</button>
+      </div>
+      <div class="third">
+      <img class="pic" src="branch.png" alt="What is a branch in Git?" width="30%">
+      <h2>What is a branch in Git</h2>
+      <p>Git branches are effectively a pointer to a snapshot of your changes. 
+        When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
+        <button type="button">Read More</button>
+      </div>
+    </div>
+      </main>
+      <footer>
+        <p class="footer">"git" can mean anything, depending on your mood</p>
+      </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
