make buttons better and visual nicer

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,7 +24,7 @@
               Git is a popular version control system. It was created by Linus Torvalds in 2005, and has been maintained by Junio Hamano since then.
               It is used for: Tracking code changes, Tracking who made changes and Coding collaboration.
             </p>
-          <button><a href="https://www.datacamp.com/blog/all-about-git" target="_blank" aria-label="Read more about what is git" title="www.datacamp.com">Read More</a></button>
+          <a class="btn" href="https://www.datacamp.com/blog/all-about-git" target="_blank" aria-label="Read more about what is git" title="www.datacamp.com">Read more about Git</a>
         </article>
         <article id="second">
             <h3>Why do developers need Git?</h3>
@@ -32,7 +32,7 @@
             <p>
               Git helps developers work more efficiently, reduce errors, and collaborate seamlessly on projects.
             </p>
-          <button><a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank" aria-label="Read more about why developers need git" title="www.atlassian.com">Read More</a></button>
+          <a class="btn" href="https://www.atlassian.com/git/tutorials/why-git" target="_blank" aria-label="Read more about why developers need git" title="www.atlassian.com">Read more to find out</a>
         </article>
         <article id="third">
             <h3>What is a branch in Git?</h3>
@@ -40,7 +40,7 @@
             <p>
               Branches in Git allow developers to work independently, experiment, and manage their code in a structured way.
             </p>
-            <button><a href="https://codeinstitute.net/blog/git-branches" target="_blank" aria-label="Read more about what is branch in Git" title="codeinstitute.net">Read More</a></button>
+            <a class="btn" href="https://codeinstitute.net/blog/git-branches" target="_blank" aria-label="Read more about what is branch in Git" title="codeinstitute.net">Read more about Branch</a>
         </article>
       </main>
       <footer>
