manual comite index.html
Li footer close /open tags fixed

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Raleway:wght@100;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
       <!-- NAV -->
        <nav>
         <ul>
-          <l><a href="#what">What</a></li>
-            <l><a href="#what">Why</a></li>
-              <l><a href="#when">When</a></li>
+          <li><a href="#what">What</a></li>
+            <li><a href="#what">Why</a></li>
+              <li><a href="#when">When</a></li>
         </ul>
        </nav>
 
@@ -82,6 +82,5 @@
             </ul>
         </div>
         </footer>
-
   </body>
 </html>
