--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -58,7 +58,7 @@
 </main>
 <footer class="footer">
   <p>&copy; 2024 My Awesome Website. All rights reserved.</p>
-  <nav>
+  <nav id="nav">
     <ul>
       <li><a href="privacy.html">Privacy Policy</a></li>
       <li><a href="terms.html">Terms of Service</a></li>
