Added form control files

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -61,7 +61,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Emmanuel</h2>
   </footer>
 </body>
 
