add value for select option

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -41,7 +41,7 @@
       <div>
         <label for="size" >Please Select your Size:<span aria-label="required">*</span></label>
         <select id="size" required>
-          <option disabled selected>Select Size</option>
+          <option value="" disabled selected>Select Size</option>
           <option>XS</option>
           <option>S</option>
           <option>M</option>
