I removed some text from customer name title

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,7 +15,7 @@
   <main>
   <form>
     <label for="customerName">Customer Name</label>
-    <input type="text" id="customerName" name="customerName" minlength="2" maxlength="50" title="Username should contain only letters (a-z, A-Z) and be 2 to 50 characters long." required placeholder="Enter User Name">
+    <input type="text" id="customerName" name="customerName" minlength="2" maxlength="50" title="Username should contain only 2 to 50 characters long." required placeholder="Enter User Name">
     <label for="email">Email Address:</label>
     <input type="email" id="email" name="email" required placeholder="Enter Email Address" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}"
     minlength="2"
