Updated date input

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -41,7 +41,7 @@
 
    
     <label for="delivery-date">Preferred Delivery Date (within 5 working days):</label>
-    <input type="date" id="delivery-date" name="delivery-date" required>
+    <input type="date" id="delivery-date" name="delivery-date" required min="2024-10-22" max="2024-10-27">
 
     <button type="submit">Place Order</button>
   </form>
