--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="an educational blog post that explains what Github is and why it is important for developers"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wire frame</title>
     <link rel="stylesheet" href="css/style.css">
@@ -38,7 +39,7 @@
               <li><b>Collaboration: </b>If you are working with a team, you can create new branches to work on different features or bug fixes without affecting the main codebase.</li>
             </ol>
           </p>
-          <button type="button"><a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read more</a></button>
+          <button type="button"><a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read more about what Git is</a></button>
         </article>
 
         <div class="inline-articles">
@@ -55,7 +56,7 @@
                 <li><b>Continuous Integration: </b>Git can help automate the process of building, testing, and deploying your project, making it easier to collaborate and maintain.</li>
               </ol>
             </p>
-            <button type="button"><a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank">Read more</a></button>
+            <button type="button"><a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank">Read more about Git features</a></button>
           </article>
 
           <article id="article-3">
@@ -70,7 +71,7 @@
                 <li>Run the following command to switch to the new branch: <code>git checkout branch-name</code></li>
               </ol>
             </p>
-            <button type="button"><a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">Read more</a></button>
+            <button type="button"><a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">Read more about Git branches</a></button>
           </article>
         </div>
       </section>
