picked a playful title for my page

--- a/Form-Control/index.html
+++ b/Form-Control/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Product Pick</h1>
+    <h1>Your Tee, Your Way: Choose & Go!</h1>
   </header>
   <main>
   <form id="tshirt-order-form">
