I have applied all the comment suggestions and adjustments

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -29,7 +29,7 @@
 
     <main>
       <section id="three-articles">
-        <article id="article-1">
+        <article id="article-1" class="article">
           <h3 id="what-is-git">What is Git?</h3>
           <p>
             Git is a version control system that helps you manage changes to files in a project, especially when working with code. Here's a quick summary:
@@ -39,11 +39,11 @@
               <li><b>Collaboration: </b>If you are working with a team, you can create new branches to work on different features or bug fixes without affecting the main codebase.</li>
             </ol>
           </p>
-          <button type="button"><a href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read more about what Git is</a></button>
+          <a class="button" role="button" href="https://www.w3schools.com/git/git_intro.asp?remote=github" target="_blank">Read more about what Git is</a>
         </article>
 
         <div class="inline-articles">
-          <article id="article-2">
+          <article id="article-2" class="article">
             <h3 id="developers-need-git">
               Why do developers need Git?
             </h3>
@@ -56,10 +56,10 @@
                 <li><b>Continuous Integration: </b>Git can help automate the process of building, testing, and deploying your project, making it easier to collaborate and maintain.</li>
               </ol>
             </p>
-            <button type="button"><a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank">Read more about Git features</a></button>
+            <a class="button" role="button" href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank">Read more about Git features</a>
           </article>
 
-          <article id="article-3">
+          <article id="article-3" class="article">
             <h3 id="what-is-a-branch-in-git">What is a branch in Git?</h3>
             <p>
               A branch in Git is a copy of your project that you can work on without affecting the main codebase. When you create a branch, you can experiment with new features, fix bugs, or make changes without affecting the rest of your project. Here's how to create a branch in Git:
@@ -71,7 +71,7 @@
                 <li>Run the following command to switch to the new branch: <code>git checkout branch-name</code></li>
               </ol>
             </p>
-            <button type="button"><a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">Read more about Git branches</a></button>
+            <a class="button" role="button" href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">Read more about Git branches</a>
           </article>
         </div>
       </section>
